theme/static/css/hydroshare_core.css
/* ... */
#wrap h1 {
	font-family: 'Lato', sans-serif;
	font-weight: 100;
	font-size: 48px;
	margin-top: 70px;
	text-transform: uppercase;
	margin-left: 70px;
	text-shadow: 1px 1px 3px #666;
	filter: Shadow(Color=#666666, Direction=45, Strength=3);
}
.showcase {
	position: relative;
	width: 438px;
	margin: 0 auto;
}
.list {
	margin: 50px 0 50px 50px;
}
.list ul {
	padding: 0;
}
.list i {
	font-size: 28px;
}
.list li {
	list-style-type: none;
	margin: 10px 0;
}
.list span.li-bg {
	background: rgba(0, 0, 0, 0.25);
	padding: 5px 10px;
}
.list span {
	font-size: 28px;
	margin-left: 20px;
	font-weight: 100;
}
.first {
	-webkit-animation-duration: 1s;
	-moz-animation-duration: 1s;
}
.second {
	-webkit-animation-duration: 1.3s;
	-moz-animation-duration: 1.3s;
}
.third {
	-webkit-animation-duration: 1.6s;
	-moz-animation-duration: 1.6s;
}
.fourth {
	-webkit-animation-duration: 1.9s;
	-moz-animation-duration: 1.9s;
}



/* ===== Profiles ===== */

/* Avatar */

.avatar {
	position: relative;
}
.avatar-bubble,
.avatar:hover .avatar-bubble {
	transition: all 0.3s;
	-webkit-transition: all 0.3s;
	-moz-transition: all 0.3s;
}
.avatar-bubble {
	position: absolute;
	bottom: 11px;
	left: 11px;
	right: 11px;
	width: inherit;
	padding: 15px;
	background: rgba(0, 0, 0, 0.5);
	text-align: center;
	font-weight: 300;
	opacity: 0;
}
.avatar:hover .avatar-bubble {
	opacity: 1;
}
.avatar-bubble a {
	display: block;
	color: #eee;
}
.avatar-bubble a:hover {
	text-decoration: none;
	color: #fff;
}

/* Profile menu */

.user-menu > ul {
	padding: 0;
	margin: 0;
	list-style-type: none;
}
.user-menu > ul > li {
	border-bottom: 1px solid #EEE;
	border-right: 1px solid #EEE;
}
.user-menu > ul > li:last-child {
	border-bottom: 0;
}
.user-menu > ul > li > a {
	display: block;
	padding: 10px;
}
.user-menu > ul > li > a:hover {
	text-decoration: none;
	background: #f5f5f5;
}
.user-menu > ul > li > a.active {
	background: #f5f5f5;
}
.user-menu > ul > li > a > i.sign {
	display: inline-block;
	margin-right: 10px;
	width: 40px;
	height: 40px;
	border-radius: 40px;
	color: #FFF;
	text-align: center;
	font-size: 18px;
	line-height: 40px;
}
.user-menu > ul > li > a > i.fa-chevron-right {
	line-height: 40px;
	color: #eaeaea;
	display: none;
}
.user-menu > ul > li > a:hover > i.fa-chevron-right {
	display: inline-block;
}
.user-menu > ul > li > a.active:hover > i.fa-chevron-right {
	display: none;
}

/* User status */

.user-status {
	margin-bottom: 20px;
}
.user-status > p > a {
	color: #333;
}

/* Other */

a.sign-out-inline:hover {
	text-decoration: none;
}

/* Modal window */

.modal-content {
	border-radius: 0;
}
.modal-header {
	background: #f5f5f5;
}
.modal-header > img,
.dialog-new > img {
	height: 50px;
	width: 50px;
	margin: 0 15px 15px 0;
	float: left;
	overflow: hidden;
}

/* Inbox */

.pm-search {
	background: #F5F5F5;
	border-top: 1px solid #DDD;
	padding: 20px;
	margin-bottom: 15px;
}
.pm-list > ul {
	list-style-type: none;
	padding: 0;
	margin: 0;
}
.pm-list > ul > li:first-child {
	border-top: 1px solid #EEE;
}
.pm-list > ul > li {
	padding: 15px;
	border-bottom: 1px solid #EEE;
}
.pm-list > ul > li:hover {
	background: #f5f5f5;
}
.pm-list > ul > li > p > img {
	height: 50px;
	width: 50px;
	float: left;
	margin-right: 15px;
	overflow: hidden;
}
.pm-list > ul > li > p {
	float: left;
	overflow: hidden;
	width: 50%;
	margin-bottom: 0;
}
.pm-list > ul > li > p > a.inbox-dialog {
	color: #999;
}
.pm-list > ul > li > p > a.inbox-dialog:hover {
	color: #999;
	text-decoration: none;
}
.dialog {
	height: 400px;
	overflow: auto;
}
.dialog-new {
	background: #F5F5F5;
	border-top: 1px solid #DDD;
	padding: 20px;
}
.dialog-new > form {
	width: 80%;
	float: left;
}

/* ===== Blog ===== */

.blog {
	line-height: 1.8;
}
.img-blog {
	padding: 10px;
	border: 1px solid #ddd;
	margin: 10px;
	width: 350px;
}
.recent-blogs ul{
	list-style-type: none;
	padding: 0;
	margin: 0;
}
.recent-blogs ul li {
	padding: 7px 0;
	border-bottom: 1px dotted #ddd;
}
.blog-months ul {
	list-style-type: none;
	padding: 0;
	margin: 0;
}
.blog-months ul li .badge {
	background: #FFF;
	color: #666;
	border: 1px solid #ddd;
}
.new-comment {
	padding: 20px 10px 10px;
	border-top: 1px solid #ddd;
	border-bottom: 1px dashed #ddd;
	margin: 20px 0;
}
.new-comment:hover {
	border-bottom-style: solid;
}
.new-comment img {
	max-height: 64px;
	width: auto;
	float: right;
}
.comment {
	margin: 10px 0;
	border-bottom: 1px dotted #ddd;
}

/* ===== About Us block ===== */

img.img-about {
	width: 40%;
	padding: 10px;
	border: 1px solid #eee;
	float: left;
	margin: 0 20px 20px 0;
}

/* ===== Media objects ===== */

.media-object {
  height: 64px;
  width: 64px;
}
.media-heading a{
  color: #333;
}
.media-heading a:hover{
  color: #333;
  text-decoration: none;
}
.read-more {
	float:right;
	margin-top: 10px;
}

/* ===== Recent Works ===== */

.thumbnail {
	position: relative;
    font-size: 14px;
}

.thumbnail .visit {
	position: absolute;
	opacity: 0;
	width: 100%;
	text-align: center;
	top: 80px;
	transition: all 0.3s;
	-webkit-transition: all 0.3s;
	-moz-transition: all 0.3s;
}
.thumbnail:hover .visit {
	opacity: 1;
	transition: all 0.3s;
	-webkit-transition: all 0.3s;
	-moz-transition: all 0.3s;
}
.thumbnail .visit a {
	color: #FFF;
	text-transform: uppercase;
	background: rgba(0, 0, 0, 0.5);
	padding: 10px 20px;
}
.thumbnail .visit a:hover {
	color: #FFF;
	text-decoration: none;
}

/* ===== Steps ===== */

.step {
	text-align: center;
	width: 50%;
	margin: 0 auto;
}
.step i {
	color: #dedede;
	transition: color 0.3s;
	-webkit-transition: color 0.3s;
	-moz-transition: color 0.3s;
}
.step h4 {
	text-transform: uppercase;
}
.step .arrow {
	position: absolute;
	top: 0;
	right: -10%;
    color: #dedede;
    font-size: 100px;
	transition: color 0.3s;
	-webkit-transition: color 0.3s;
	-moz-transition: color 0.3s;
}
.step:hover i {
	color: #FFA973;
	transition: color 0.3s;
	-webkit-transition: color 0.3s;
	-moz-transition: color 0.3s;
}
/* ... */

